tests/diagnostics/push_str_wrong_type.kal
# push_str's second argument must be a str.
{ let mut s: String = string("a"); push_str(s, 42); };
